--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D'
 - !lcsh 'History -- Philosophy'
+- GITenberg
 title: 'Principes de la Philosophie de l''Histoire
 
   traduits de la ''Scienza nuova'''
